--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -12,7 +12,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>Trouvez un produit de substitution pour ceux que vous consommez tous les jours</h2>
         <br>
-        <form id="searchForm" action="{% url "productToSearch" %}" method="post">
+        <form id="searchForm" action="{% url "home" %}" method="post">
           {% csrf_token %}
           {{ form.product }}
           <input type="submit" class="btn btn-info" value="Chercher">
@@ -58,7 +58,7 @@
       </div>
       <div class="col-lg-6 col-md-6 text-center">
         <div class="service-box mt-5 mx-auto">
-          <img class="img-fluid" src="{% static 'food/img/ratatouille-portrait.jpg' %}" alt="Remy">
+          <img class="img-fluid" src="{% static 'food/img/ratatouille-portrait.png' %}" alt="Remy">
           <h3 class="mb-3">Remy</h3>
         </div>
       </div>
