--- a/food/templates/results.html
+++ b/food/templates/results.html
@@ -1,14 +1,43 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
 <header class="mastheadResult text-center text-white d-flex">
     <div class="container my-auto">
         <div class="row">
             <div class="col-lg-10 mx-auto">
                 <h1>
-                    <strong>Du gras, oui mais de qualité !</strong>
+                    <strong>{{ product }}</strong>
                 </h1>
             </div>
         </div>
     </div>
 </header>
+<section id="results">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="replaceArgument">Vous pouvez remplacer cet aliment par:</h2>
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="picture col-lg-4 col-md-4 text-center">
+                <div class="row">
+                    <div class="subResult col-lg-12 col-md-12 text-center">
+                        <img class="subImg" src="{% static 'food/img/230.png' %}" alt="Produit">
+                        <img class="nutImg" src="{% static 'food/img/A.png' %}" alt="Nutrition">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class=" col-lg-12 col-md-12 text-center">
+                        <h5>Nom produit</h5>
+                        <p><a class="saveProduct" href="#"><i class="saveIco material-icons">save</i> Sauvegarder</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
