--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -12,7 +12,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>Trouvez un produit de substitution pour ceux que vous consommez tous les jours</h2>
         <br>
-        <form id="searchForm" action="{% url "home" %}" method="post">
+        <form id="searchForm" action="." method="post">
           {% csrf_token %}
           {{ form.product }}
           <input type="submit" class="btn btn-info" value="Chercher">
