--- a/food/templates/subscribe.html
+++ b/food/templates/subscribe.html
@@ -14,18 +14,27 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                {% if error %}
+                {% if errorUsername %}
                 <p>
-                    <strong>Utilisateur inconnu ou mauvais de mot de passe.</strong>
+                    <strong>Nom d'utilisateur existant, veuillez en choisir un autre</strong>
                 </p>
-                {% endif %} {% if user.is_authenticated %} Vous êtes connecté, {{ user.username }} ! {% else %}
-                <form class="connexionForm" method="post" action=".">
+                {% endif %}
+                {% if errorPassword %}
+                <p>
+                    <strong>Les mots de passe ne correspondent pas</strong>
+                </p>
+                {% endif %}
+                {% if errorForm %}
+                <p>
+                    <strong>Veuillez remplir tous les champs</strong>
+                </p>
+                {% endif %}
+                {% if not user.is_authenticated %}
+                <form class="createUserForm" method="post" action="{% url 'subscribe' %}">
                     {% csrf_token %} {{ form.as_p }}
-                    <input type="submit" value="Se connecter" />
+                    <input type="submit" value="S'inscrire" />
                 </form>
                 {% endif %}
-                <br>
-                <a class="subscribe" href="{%url 'subscribe'%}">Pas encore inscrit ?</a>
             </div>
         </div>
     </div>
