--- a/food/templates/results.html
+++ b/food/templates/results.html
@@ -6,12 +6,23 @@
         <div class="row">
             <div class="col-lg-10 mx-auto">
                 <h1>
-                    <strong>{{ product }}</strong>
+                    <strong>{{ title }}</strong>
                 </h1>
             </div>
         </div>
     </div>
 </header>
+{% if noAnswer %}
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Aucun résultat</h2>
+            </div>
+        </div>
+    </div>
+</section>
+{% else %}
 <section id="results">
     <div class="container">
         <div class="row">
@@ -21,23 +32,41 @@
             </div>
         </div>
     </div>
+    {% for item in product %}
     <div class="container">
         <div class="row">
             <div class="picture col-lg-4 col-md-4 text-center">
                 <div class="row">
                     <div class="subResult col-lg-12 col-md-12 text-center">
-                        <img class="subImg" src="{% static 'food/img/230.png' %}" alt="Produit">
+                        <img class="subImg" src={{ item.0 }} alt="Produit">
+                        {% if item.1 == 'a' %}
                         <img class="nutImg" src="{% static 'food/img/A.png' %}" alt="Nutrition">
+                        {% endif %}
+                        {% if item.1 == 'b' %}
+                        <img class="nutImg" src="{% static 'food/img/B.png' %}" alt="Nutrition">
+                        {% endif %}
+                        {% if item.1 == 'c' %}
+                        <img class="nutImg" src="{% static 'food/img/C.png' %}" alt="Nutrition">
+                        {% endif %}
+                        {% if item.1 == 'd' %}
+                        <img class="nutImg" src="{% static 'food/img/D.png' %}" alt="Nutrition">
+                        {% endif %}
+                        {% if item.1 == 'e' %}
+                        <img class="nutImg" src="{% static 'food/img/E.png' %}" alt="Nutrition">
+                        {% endif %}
                     </div>
                 </div>
                 <div class="row">
                     <div class=" col-lg-12 col-md-12 text-center">
-                        <h5>Nom produit</h5>
+                        <h5>{{ item.2 }}</h5>
                         <p><a class="saveProduct" href="#"><i class="saveIco material-icons">save</i> Sauvegarder</a></p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    {% endfor %}
+    <p>{{product}}</p>
 </section>
+{% endif %}
 {% endblock %}
