--- a/food/templates/base.html
+++ b/food/templates/base.html
@@ -83,7 +83,7 @@
                     <a href="#">Mention légales</a>
                 </div>
                 <div class="col-lg-6 mx-auto text-center">
-                    <a href="#contact">Contact</a>
+                    <a href="{% url "home" %}#contact">Contact</a>
                 </div>
             </div>
         </div>
