--- a/food/templates/results.html
+++ b/food/templates/results.html
@@ -59,7 +59,11 @@
                 <div class="row">
                     <div class=" col-lg-12 col-md-12 text-center">
                         <h5>{{ item.2 }}</h5>
+                        {% if not user.is_authenticated %}
+                        <p title="Veuillez vous connecter pour sauvegarder"><i class="saveIco material-icons">save</i> Sauvegarder</p>
+                        {% else %}
                         <p><a class="saveProduct" href="#"><i class="saveIco material-icons">save</i> Sauvegarder</a></p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
