--- a/food/templates/product.html
+++ b/food/templates/product.html
@@ -6,32 +6,68 @@
         <div class="row">
             <div class="col-lg-10 mx-auto">
                 <h1>
-                    <strong>{{ product }}</strong>
+                    <strong>Liste des produits sauvegardées</strong>
                 </h1>
             </div>
         </div>
     </div>
 </header>
+{% if noneList == 1 %}
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 text-center">
-                <img class="nutriPicture img-fluid" src="{% static 'food/img/A.png' %}" alt="lettre A" style="width:30%">
-                <img class="nutriPicture img-fluid" src="{% static 'food/img/B.png' %}" alt="lettre B">
-                <img class="nutriPicture img-fluid" src="{% static 'food/img/C.png' %}" alt="lettre C">
-                <img class="nutriPicture img-fluid" src="{% static 'food/img/D.png' %}" alt="lettre D">
-                <img class="nutriPicture img-fluid" src="{% static 'food/img/E.png' %}" alt="lettre E">
-            </div>
-            <div class="col-lg-6 text-center">
-                <h4 class="landmark">Repères nutritionnels pour 100g:</h4>
-                <!-- Boucle en UL pour la liste-->
-            </div>
-        </div>
-        <div class="row">
             <div class="col-lg-12 text-center">
-                <button type="button" class="btn btn-primary">Voir la fiche d'Open Food Facts</button>
+                <h4>Aucun produit enregistré</h4>
             </div>
         </div>
     </div>
 </section>
+{% else %}
+<section class="marginTop">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h4 class="proTitle">{{ product.product_name|upper }}</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <nav class="productSave">
+                    <h5>Liste des produits sauvegardées:</h5>
+                    <ul>
+                        {% for item in productList %}
+                        <li><a class="proLink" href="{% url 'product' forloop.counter0 %}">{{ item.product_name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-lg-4 text-center">
+                <div>
+                    <img class="proImg" src="{{ product.product_picture }}" alt="Produit">
+                </div>
+                <div class="nutriTab">
+                    <img class="nutriPicture img-fluid" src="{% static 'food/img/A.png' %}" alt="lettre A"{% if product.product_nutriscore == 'a' %} style="margin-bottom: 80px"{% endif %}>    
+                    <img class="nutriPicture img-fluid" src="{% static 'food/img/B.png' %}" alt="lettre B"{% if product.product_nutriscore == 'b' %} style="margin-bottom: 80px"{% endif %}>
+                    <img class="nutriPicture img-fluid" src="{% static 'food/img/C.png' %}" alt="lettre C"{% if product.product_nutriscore == 'c' %} style="margin-bottom: 80px"{% endif %}>
+                    <img class="nutriPicture img-fluid" src="{% static 'food/img/D.png' %}" alt="lettre D"{% if product.product_nutriscore == 'd' %} style="margin-bottom: 80px"{% endif %}>
+                    <img class="nutriPicture img-fluid" src="{% static 'food/img/E.png' %}" alt="lettre E"{% if product.product_nutriscore == 'e' %} style="margin-bottom: 80px"{% endif %}>
+                </div>
+            </div>
+            <div class="col-lg-4 text-center">
+                <h4 class="landmark">Repères nutritionnels pour 100g:</h4>
+                <ul class="nutricent">
+                    {% for key, value in nutriList.items %}
+                    <li>{{ key }}: {{value|floatformat}}  gr</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 text-center marginTop">
+                <a href="{{ product.product_url }}" class="btn btn-primary" role="button" >Voir la fiche d'Open Food Facts</a>
+            </div>
+        </div>
+    </div>
+</section>
+{% endif %}
 {% endblock %}
