--- a/food/templates/results.html
+++ b/food/templates/results.html
@@ -13,11 +13,12 @@
     </div>
 </header>
 {% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
-</ul>
+{% for message in messages %}
+<div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    {{ message }}.
+</div>
+{% endfor %}
 {% endif %}
 {% if noAnswer %}
 <section>
