--- a/food/templates/base.html
+++ b/food/templates/base.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 text-center">
-                    <a href="#">Mention légales</a>
+                    <a href="{% url 'legal' %}">Mention légales</a>
                 </div>
                 <div class="col-lg-6 mx-auto text-center">
                     <a href="{% url "home" %}#contact">Contact</a>
