--- a/food/templates/account.html
+++ b/food/templates/account.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% load static %} {% block content %}
-<header class="mastheadResult text-center text-white d-flex">
+<header class="masthead text-center text-white d-flex">
     <div class="container my-auto">
         <div class="row">
             <div class="col-lg-10 mx-auto">
