--- a/food/templates/results.html
+++ b/food/templates/results.html
@@ -1,7 +1,19 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<header class="mastheadResult text-center text-white d-flex">
+{% if messages %}
+{% for message in messages %}
+<div class="alert">
+    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    {{ message }}.
+</div>
+{% endfor %}
+{% endif %}
+{% if noAnswer %}
+<header class="mastheadResult text-center d-flex noResultFoundBackground">
+{% else %}
+<header class="mastheadResult text-center d-flex resultFoundBackground">
+{% endif %}
     <div class="container my-auto">
         <div class="row">
             <div class="col-lg-10 mx-auto">
@@ -12,14 +24,6 @@
         </div>
     </div>
 </header>
-{% if messages %}
-{% for message in messages %}
-<div class="alert">
-    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-    {{ message }}.
-</div>
-{% endfor %}
-{% endif %}
 {% if noAnswer %}
 <section>
     <div class="container">
@@ -46,7 +50,7 @@
             <div class="picture col-lg-4 col-md-4 text-center">
                 <div class="row">
                     <div class="subResult col-lg-12 col-md-12 text-center">
-                        <img class="subImg" src={{ item.0 }} alt="Produit">
+                        <img class="subImg" src="{{ item.0 }}" alt="Produit">
                         {% if item.1 == 'a' %}
                         <img class="nutImg" src="{% static 'food/img/A.png' %}" alt="Nutrition">
                         {% endif %}
