update result image

--- a/food/templates/results.html
+++ b/food/templates/results.html
@@ -9,7 +9,7 @@
 </div>
 {% endfor %}
 {% endif %}
-{% if noAnswer %}
+{% if noPicture %}
 <header class="mastheadResult text-center d-flex noResultFoundBackground">
 {% else %}
 <header class="mastheadResult text-center d-flex resultFoundBackground">
