--- a/food/templates/base.html
+++ b/food/templates/base.html
@@ -48,6 +48,7 @@
                             <input type="text" name="product" class="form-control" id="searchBar" placeholder="Entrez un produit" maxlength="30" required="">
                         </form>
                     </li>
+                    {% if search %}
                     {% if not user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="{%url 'connexion'%}" title="Se connecter">
@@ -68,6 +69,29 @@
                                 <i class="material-icons">exit_to_app</i>
                             </a>
                         </li>
+                    {% endif %}
+                    {% else %}
+                    {% if not user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="{%url 'connexion'%}" title="Se connecter">
+                            <i class="material-icons">person</i>
+                        </a>
+                    </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="{% url 'account'%}" title="Mon compte">
+                                <i class="material-icons">person</i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="{% url 'product' %}" title="Mes aliments" id="carrot"></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="{%url 'deconnexion'%}" title="Déconnexion">
+                                <i class="material-icons">exit_to_app</i>
+                            </a>
+                        </li>
+                    {% endif %}
                     {% endif %}
                 </ul>
             </div>
