--- a/food/templates/legalise.html
+++ b/food/templates/legalise.html
@@ -33,7 +33,7 @@
                         <br><span style="color: rgb(0, 0, 0);">Hébergement :</span>
                     </b>
                 </p>
-                Hébergeur : Heroku, Suite 300, San Francisco, California 94105 Site Web :
+                Hébergeur : Heroku, Suite 300, San Francisco, California 94105. Site Web :
                 <a href="http://www.heroku.com" style="color: #1142e4; font-size: 1em;">www.heroku.com</a>
                 </br>
                 <p style="color: #b51a00;">
@@ -42,7 +42,7 @@
                         <b> : </b>
                     </span>
                 </p>
-                Yohan Vienne Adresse : 11 Avenue Marechal Foch Site Web :
+                Yohan Vienne Adresse : 11 Avenue Marechal Foch, Paris. Site Web :
                 <a href="http://www.yohanandco.com" style="color: #1142e4; font-size: 1em;">Yohan&Co</a>
                 </br>
                 <p style="color: #b51a00;">
